fix align content

--- a/src/app/sections/options/index.module.scss
+++ b/src/app/sections/options/index.module.scss
@@ -2,6 +2,7 @@
   width: 22rem;
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
   flex-shrink: 0;
   height: -webkit-fill-available;
   overflow: scroll;
